githuv pages deployment

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://shinheep.github.io/travelgram",
+  "homepage": "https://dmlee123.github.io/travelgram-frontend",
   "name": "travel-frontend",
   "version": "0.1.0",
   "private": true,
